widened game ation buttons to stop line break on audio toggle

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,7 +163,7 @@ body p {
 
 #music-button-game,
 #reset-button {
-        width: 150px;
+        width: 160px;
     padding: 15px;
 }
 
